feat: authors section

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#books">Books</a>
+                    <a href="#books_section">Books</a>
                 </li>
                 <li>
-                    <a href="#authors">Authors</a>
+                    <a href="#authors_section">Authors</a>
                 </li>
             </ul>
         </nav>
@@ -27,7 +27,7 @@
         <section>
             <div class="home">
                 <div class="title">
-                    <h1>Welcome to the library !</h1>
+                    <h1>Bienvenue dans la bibliothèque!</h1>
                 </div>
                 <div class="content">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur nulla esse, facere eum itaque aliquam, ex maxime, amet reprehenderit enim assumenda magni odit optio possimus similique. Quas cumque, eius in eligendi magni impedit, provident, molestiae nesciunt perspiciatis quae atque quidem! Dolore quisquam similique maiores tenetur ex, illo qui in unde!
@@ -42,8 +42,9 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="books_section">
             <div>
+                <h3>Nos livres</h3>
                 <input type="search" class="search" id="searchBar" placeholder="Recherche un livre...">
                 <div class="books-container"></div>
                 <div class="books-modal-container">
@@ -59,84 +60,191 @@
                 <button class="see_more">See more books...</button>
             </div>
         </section>
-        <section>
-            <div id="authors" class="container">
-                <h3>Authors</h3>
+        <section id="authors_section">
+            <div>
+                <h3>Nos auteurs</h3>
                 <div class="authors" id="authors_letter">
-                    <div id="letter_A">
-                        <h3>A</h3>
+                    <div>
+                        <h3>
+                            <span>A</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_A" class="letters-content"></div>
                     </div>
-                    <div id="letter_B">
-                        <h3>B</h3>
+                    <div>
+                        <h3>
+                            <span>B</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_B" class="letters-content"></div>
                     </div>
-                    <div id="letter_C">
-                        <h3>C</h3>
+                    <div>
+                        <h3>
+                            <span>C</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_C" class="letters-content"></div>
                     </div>
-                    <div id="letter_D">
-                        <h3>D</h3>
+                    <div>
+                        <h3>
+                            <span>D</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_D" class="letters-content"></div>
                     </div>
-                    <div id="letter_E">
-                        <h3>E</h3>
+                    <div>
+                        <h3>
+                            <span>E</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_E" class="letters-content"></div>
                     </div>
-                    <div id="letter_F">
-                        <h3>F</h3>
+                    <div>
+                        <h3>
+                            <span>F</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_F" class="letters-content"></div>
                     </div>
-                    <div id="letter_G">
-                        <h3>G</h3>
+                    <div>
+                        <h3>
+                            <span>G</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_G" class="letters-content"></div>
                     </div>
-                    <div id="letter_H">
-                        <h3>H</h3>
+                    <div>
+                        <h3>
+                            <span>H</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_H" class="letters-content"></div>
                     </div>
-                    <div id="letter_I">
-                        <h3>I</h3>
+                    <div>
+                        <h3>
+                            <span>I</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_I" class="letters-content"></div>
                     </div>
-                    <div id="letter_J">
-                        <h3>J</h3>
+                    <div>
+                        <h3>
+                            <span>J</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_J" class="letters-content"></div>
                     </div>
-                    <div id="letter_K">
-                        <h3>K</h3>
+                    <div>
+                        <h3>
+                            <span>K</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_K" class="letters-content"></div>
                     </div>
-                    <div id="letter_L">
-                        <h3>L</h3>
+                    <div>
+                        <h3>
+                            <span>L</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_L" class="letters-content"></div>
                     </div>
-                    <div id="letter_M">
-                        <h3>M</h3>
+                    <div>
+                        <h3>
+                            <span>M</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_M" class="letters-content"></div>
                     </div>
-                    <div id="letter_N">
-                        <h3>N</h3>
+                    <div>
+                        <h3>
+                            <span>N</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_N" class="letters-content"></div>
                     </div>
-                    <div id="letter_O">
-                        <h3>O</h3>
+                    <div>
+                        <h3>
+                            <span>O</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_O" class="letters-content"></div>
                     </div>
-                    <div id="letter_P">
-                        <h3>P</h3>
+                    <div>
+                        <h3>
+                            <span>P</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_P" class="letters-content"></div>
                     </div>
-                    <div id="letter_Q">
-                        <h3>Q</h3>
+                    <div>
+                        <h3>
+                            <span>Q</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_Q" class="letters-content"></div>
                     </div>
-                    <div id="letter_R">
-                        <h3>R</h3>
+                    <div>
+                        <h3>
+                            <span>R</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_R" class="letters-content"></div>
                     </div>
-                    <div id="letter_S">
-                        <h3>S</h3>
+                    <div>
+                        <h3>
+                            <span>S</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_S" class="letters-content"></div>
                     </div>
-                    <div id="letter_T">
-                        <h3>T</h3>
+                    <div>
+                        <h3>
+                            <span>T</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_T" class="letters-content"></div>
                     </div>
-                    <div id="letter_U">
-                        <h3>U</h3>
+                    <div>
+                        <h3>
+                            <span>U</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_U" class="letters-content"></div>
                     </div>
-                    <div id="letter_V">
-                        <h3>V</h3>
+                    <div>
+                        <h3>
+                            <span>V</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_V" class="letters-content"></div>
                     </div>
-                    <div id="letter_W">
-                        <h3>W</h3>
+                    <div>
+                        <h3>
+                            <span>W</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_W" class="letters-content"></div>
                     </div>
-                    <div id="letter_X">
-                        <h3>X</h3>
+                    <div>
+                        <h3>
+                            <span>X</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_X" class="letters-content"></div>
                     </div>
-                    <div id="letter_Z">
-                        <h3>Z</h3>
+                    <div>
+                        <h3>
+                            <span>Y</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_Y" class="letters-content"></div>
+                    </div>
+                    <div>
+                        <h3>
+                            <span>Z</span>
+                            <ion-icon name="caret-down-outline"></ion-icon>
+                        </h3>
+                        <div id="letter_Z" class="letters-content"></div>
                     </div>
                 </div>
             </div>
